create multiple nested context menus

--- a/popup.html
+++ b/popup.html
@@ -12,5 +12,5 @@
 <body>
     <button id="changeColor"></button>
 </body>
-<script src="poup.js"></script>
+<script src="popup.js"></script>
 </html>
