added values for work extension

--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <style>
-        button{
-            height: 30px;
-            width: 30px;
-            outline: none;
+        ol li{
+            margin: 1rem;
         }
     </style>
 </head>
 <body>
-    <button id="changeColor"></button>
+    <ol>
+        <li>Billing</li>
+        <li>In-home</li>
+        <li>Claims</li>
+        <li>Tech sup.</li>
+        <li>Assured Living</li>
+        <li>Other Q's</li>
+    </ol>
 </body>
 <script src="popup.js"></script>
 </html>
