removed popup.js and renamed file. shipping as needed

--- a/popup.html
+++ b/popup.html
@@ -17,5 +17,6 @@
         <li>Other Q's</li>
     </ol>
 </body>
-<script src="popup.js"></script>
+<!-- There was a JS file but saving comment here to remind me to add one -->
+<!-- <script src="popup.js"></script> -->
 </html>
