fixed clipboard functionality, added permissions, added search for menu

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,12 @@
     <style>
         ol li{
             margin: 1rem;
+            border: 1px solid black;
+            padding: 2px;
+        }
+        button{
+            background: lightblue;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -16,6 +22,8 @@
         <li>Assured Living</li>
         <li>Other Q's</li>
     </ol>
+    <input type="text" id="input"/>
+    <button id="search">BestBuy Search</button>
 </body>
 <!-- There was a JS file but saving comment here to remind me to add one -->
 <!-- <script src="popup.js"></script> -->
