added a button for website search

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
         button{
             background: lightblue;
             border-radius: 5px;
+            margin-top: 15px;
         }
     </style>
 </head>
@@ -23,8 +24,7 @@
         <li>Other Q's</li>
     </ol>
     <input type="text" id="input"/>
-    <button id="search">BestBuy Search</button>
+    <button id="button">BestBuy Search</button>
+    <script src="menuFeatures.js"></script>
 </body>
-<!-- There was a JS file but saving comment here to remind me to add one -->
-<!-- <script src="popup.js"></script> -->
 </html>
